Reject requestPresent requests when fullscreen is not enabled.

BUG=687369

Review-Url: https://codereview.chromium.org/2662213006
Cr-Commit-Position: refs/heads/master@{#447540}

Former-commit-id: b29ec7143c6fbc8ea4271c7f5e3428dae0c4eba8